Formulaire de contact complet : envoi + confirmation automatique client OK

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_EMAILJS_SERVICE_ID=service_ztilv75
 VITE_EMAILJS_TEMPLATE_ID=template_037tidr
+VITE_EMAILJS_TEMPLATE_AUTO=template_j6cpaf6r
 VITE_EMAILJS_PUBLIC_KEY=9M6CPKHSHYhzm4z_Z
